tests/ui/fromply_reject_type.stderr
error: `ply(type = ...)` is not supported by `#[derive(FromPly)]`; supported sub-attributes are: `name`
 --> tests/ui/fromply_reject_type.rs:5:5
  |
5 | /     #[ply(type = "float")]
6 | |     a: Vec<u32>,
  | |_______________^
